gave button-container a z-indez of 10grand which solved the problem of pedestrians and vehicles overlapping button (functionality).

--- a/frontend/src/components/SimulationContainer/simulationContainer.css
+++ b/frontend/src/components/SimulationContainer/simulationContainer.css
@@ -41,7 +41,7 @@ body, html {
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
-    z-index: 10;
+    z-index: 100000;
   }
   
   .button-container button {
